# wgpu-IBLGenerator

./: Cargo.toml
result/: diffuse.hdr  specular_1_0.hdr
src/: camera.rs  cube_map_renderer.rs  cube_mipmap_renderer.rs  cube_texture.rs  hdr_texture.rs  ibl_renderer.rs  main.rs  state.rs  texture_2d.rs
src/shaders/: cube_map.wgsl  ibl.wgsl  main.wgsl  mipmap.wgsl
